# getGems

./: .env  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  z.py
app/: main.py
app/clients/: __base_client__.py  __client_manager__.py  __init__.py  __schemas__.py  base_client.py  cas.py  storage.py
app/clients/getgems_io/: client.py  models.py
app/core/: __queues.py  constants.py  dependnecies.py  executors.py  logger.py  queues.py  sentry.py  settings.py
app/core/_libs/: __init__.py  clickhouse_pool.py  httpx_client.py
app/core/clients/: __init__.py  base_client.py
app/core/clients/getgems_io/: client.py  constants.py  models.py
app/core/common/: chunked_list.py  chunked_queue.py  recovery_deque.py  recovery_queue.py  retryable.py
app/core/database/: clickhouse.py
app/core/db/models/: user.py
app/core/helpers/: asyncs.py  retries.py
app/core/repositories/: nft_collection_stats.py  nft_collections.py
app/core/schemas/: ch_top_colls.py  get_gems_client.py
app/modules/clients/: base_client.py
app/modules/clients/getgems_io/: client.py  models.py
app/modules/workers/: __init__.py  base_worker.py  runner.py
app/workers/: __init__.py  base_worker.py  runner.py
app/workers/first_parser/: container.py  parser.py  worker.py
app/workers/stats_fetcher/: fetcher.py  main.py  scheduler.py  writer_ch.py
migrations/: 000001_name.up.sql  000001_nft-collection-table.down.sql  000001_nft-collection-table.up.sql  000002_nft-collections-stats-table.down.sql  000002_nft-collections-stats-table.up.sql
(+7 files in other folders)
