[tool.poetry]
name = "telecrypto"
version = "0.1.0"
description = ""
authors = ["Аркадий <chuark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
clickhouse-sqlalchemy = "^0.3.1"
ruff = "^0.4.5"
clickhouse-migrations = "^0.6.0"
asynch = {extras = ["compression"], version = "^0.2.3"}
sentry-sdk = "^2.3.1"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    ".venv/*",
    "*.pyc",
    ".mypy_cache",
    ".pytest_cache",
    "setup.py",
]
line-length = 120
indent-width = 4
force-exclude = true
show-fixes = true
output-format = "concise"
target-version = "py312"

[tool.ruff.lint]
select = ["I", "ANN", "D", "F", "E", "W", "N", "C90", "PL", "T20", "SLF", "SIM", "TID", "TCH", "PERF", "FURB"]
ignore = ["D100", "D104", "D107", "D203", "D212", "D401", "F403", "N805", "ANN101", "ANN102", "ANN401", "PLR"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "(?x)(^venv/ | ^venv\\.py$)"

[tool.ruff.format]
line-ending = "auto"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 40
